--- a/chats/chatsatin.htm
+++ b/chats/chatsatin.htm
@@ -20,7 +20,7 @@
 				<tr>
 					<td colspan="2"><img src="img/satin.jpg" class="chat" alt="satin"/></td>
 					<td>
-						<p>Depuis très lontemps les chats noirs ont était associés avec des idées négatives. mais on est là pour vous assurez q'un chat noir n'est qu'une petite boule d'amour :)<p>
+						<p>Depuis très lontemps les chats noirs ont était associés avec des idées négatives. mais on est là pour vous assurez qu'un chat noir n'est qu'une petite boule d'amour :)<p>
 						<br>
 						<p>Vous serez très ravis de rencontrer Satin qui est un de nos chats les plus câlineux !</p>
 						<br>
