--- a/chiens/chien1.htm
+++ b/chiens/chien1.htm
@@ -20,7 +20,7 @@
 					<td colspan="2"><img src="img/chien1.jpg" class="chat" alt="belle"/></td>
 					<td>
 						<p>
-						Belle est un petit chiot de 5 semaine, il a était trouvé tout seul sans sa mère, mais il est déjà très havitué aux gens.
+						Belle est un petit chiot de 5 semaine, il a était trouvé tout seul sans sa mère, mais il est déjà très habitué aux gens.
 						</p>
 						<br>
 						<p>
